added text color

--- a/src/index.css
+++ b/src/index.css
@@ -2,31 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-
 #customActive a.active {
   font: bold;
-  color: yellow;
+  color: orange;
 }
 #customActive a {
   background-color: transparent;
 }
 
 #dashboard a.active {
-    color: white;
-  }
+  color: white;
+}
 #dashboard a {
-    background-color: transparent;
-  }
-#tabCustom ul{
+  background-color: transparent;
+}
+#tabCustom ul {
   display: flex;
   justify-content: center;
   border: none;
   margin-bottom: 30px;
 }
-#tabCustom ul li.react-tabs__tab--selected{
+#tabCustom ul li.react-tabs__tab--selected {
   border: none;
-  color: #D1A054;
-  border-bottom: 2px solid #D1A054;
+  color: #d1a054;
+  border-bottom: 2px solid #d1a054;
 }
-
-
